Sign up UI done!

--- a/home.html
+++ b/home.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: rgba(128, 255, 0, 0.368);
+        }
+        .container{
+            border:1px solid;           
+            position:relative;
+            top:25vh;
+            height:50vh;
+            left:33vw;
+            width:33vw;
+            border-radius: 50px;
+            background-color: white;
+
+        }     
+        h1{
+            position: relative;
+            left:13vw;
+        }
+        .email{
+            width:28vw;
+            position: relative;
+            left:2vw;
+            height:4vh;
+            border-radius: 20px;
+        }
+        .pass{
+            width:28vw;
+            position: relative;
+            left:2vw; 
+            height:4vh;
+            border-radius: 20px;
+        }
+        .signup{
+            position: absolute;
+            bottom: 5vh;
+            left:9vw;
+            height:4vh;
+            width:15vw;
+            color:white;
+            background-color: blue;
+            border-radius: 10px;
+        }  
+        /* form{
+            height:33vh;
+        } */
+        .txt{
+            position: relative;
+            left:2vw;
+            height:10vh;
+            font-size: 4vh;
+        }
+        .three{
+            position:absolute;
+            top:20vh;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <form method="POST">
+            <div class="header"><h1>Sign up</h1></div>
+            <div class="txt">Create account</div><br><br>  
+            <div class="three">
+            <div class = "box1">
+              <input class="email" type = "email" placeholder="Email">
+            </div>
+            <br>
+            <div class="box2">
+                <input class="pass" type = "password" placeholder="Password">
+            </div>
+            </div>
+            <div class="button">
+                <button class="signup">Sign up</button>
+            </div>
+        </form>
+    </div>
     
 </body>
 </html>
