Signup(with profession) and signin pgs created!

--- a/signup.html
+++ b/signup.html
@@ -58,14 +58,14 @@
         }
         .three{
             position:absolute;
-            top:20vh;
+            top:18vh;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <form method="POST">
-            <div class="header"><h1>Sign in</h1></div>
+            <div class="header"><h1>Sign up</h1></div>
             <div class="txt">Create account</div><br><br>  
             <div class="three">
             <div class = "box1">
@@ -75,9 +75,13 @@
             <div class="box2">
                 <input class="pass" type = "password" placeholder="Password">
             </div>
+            <br>
+            <div class="box2">
+                <input class="pass" type = "prof" placeholder="Profession">
+            </div>
             </div>
             <div class="button">
-                <button class="signup">Sign in</button>
+                <button class="signup">Sign up</button>
             </div>
         </form>
     </div>
